# manim-livestream

./: .gitignore  README.md  pyproject.toml
src/manim_livestream/: __init__.py  __main__.py  cli.py  stream_file_writer.py  stream_renderer.py  stream_rtp.sdp  stream_starter.py  streaming_scene.py  utils.py
src/manim_livestream/config/: __init__.py  default.cfg  logger_utils.py
src/manim_livestream/utils/: __init__.py  default.cfg  utils.py
streams/: stream_rtp.sdp
streams/Tex/: 0bce26208ea7cbd0.dvi  0bce26208ea7cbd0.tex  2c6c8d8aab0c8821.dvi  2c6c8d8aab0c8821.tex  32648c6958823b1a.dvi  32648c6958823b1a.tex  97523f76d48b319d.dvi  97523f76d48b319d.tex  978f007f42c72acb.dvi  978f007f42c72acb.tex  a7b35d4c33ed1cd1.dvi  a7b35d4c33ed1cd1.tex  c16e788862907bfa.dvi  c16e788862907bfa.tex  d5ae4f67c812a4b2.dvi  d5ae4f67c812a4b2.tex  f9c3e17806f327af.dvi  f9c3e17806f327af.tex
tests/: test_manim_livestream.py
